--- a/package.json
+++ b/package.json
@@ -9,17 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.0",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "date-fns": "^2.29.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "immer": "^10.0.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.21.4",
+    "zustand": "^4.3.7"
   }
 }
