--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@paralleldrive/cuid2": "^2.2.0",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
@@ -21,6 +24,8 @@
     "next": "13.3.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
