--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@paralleldrive/cuid2": "^2.2.0",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
@@ -32,5 +33,10 @@
     "typescript": "5.0.4",
     "zod": "^3.21.4",
     "zustand": "^4.3.7"
+  },
+  "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9"
   }
 }
