--- a/package.json
+++ b/package.json
@@ -3,19 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "generate && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migration": "prisma migrate dev --name init",
+    "generate": "prisma generate",
+    "prisma": "npx prisma db push",
+    "studio": "npx prisma studio"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@paralleldrive/cuid2": "^2.2.0",
+    "@prisma/client": "^4.13.0",
     "@tailwindcss/container-queries": "^0.1.1",
     "@types/node": "18.16.1",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "@vercel/postgres": "^0.1.3",
     "autoprefixer": "10.4.14",
     "classnames": "^2.3.2",
     "date-fns": "^2.29.3",
@@ -35,8 +41,11 @@
     "zustand": "^4.3.7"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^10.1.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "prisma": "^4.13.0",
+    "prisma-erd-generator": "^1.5.4"
   }
 }
